// Vitest Snapshot v1

exports[`List.svelte > Should render a list of values 1`] = `
<body>
  <div>
    <list
      class="flex flex-col w-full flex-shrink-0 select-none list"
    >
       
      <item
        class="flex flex-shrink-0 flex-grow-0 min-h-8 items-center cursor-pointer w-full gap-2 select-none item"
      >
         
         
        <p
          class="flex flex-grow"
        >
          1
        </p>
         
      </item>
      <item
        class="flex flex-shrink-0 flex-grow-0 min-h-8 items-center cursor-pointer w-full gap-2 select-none item"
      >
         
         
        <p
          class="flex flex-grow"
        >
          2
        </p>
         
      </item>
      <item
        class="flex flex-shrink-0 flex-grow-0 min-h-8 items-center cursor-pointer w-full gap-2 select-none item"
      >
         
         
        <p
          class="flex flex-grow"
        >
          3
        </p>
         
      </item>
    </list>
  </div>
</body>
`;

exports[`List.svelte > Should render items using custom component 1`] = `
<body>
  <div>
    <list
      class="flex flex-col w-full flex-shrink-0 select-none list"
    >
       
      <item
        class="flex flex-shrink-0 flex-grow-0 min-h-8 items-center cursor-pointer w-full gap-2 select-none item"
      >
        <span>
          1
        </span>
         
      </item>
      <item
        class="flex flex-shrink-0 flex-grow-0 min-h-8 items-center cursor-pointer w-full gap-2 select-none item"
      >
         
         
        <p
          class="flex flex-grow"
        >
          2
        </p>
         
      </item>
      <item
        class="flex flex-shrink-0 flex-grow-0 min-h-8 items-center cursor-pointer w-full gap-2 select-none item"
      >
         
         
        <p
          class="flex flex-grow"
        >
          3
        </p>
         
      </item>
    </list>
  </div>
</body>
`;

exports[`List.svelte > Should render items using custom mapping 1`] = `
<body>
  <div>
    <list
      class="flex flex-col w-full flex-shrink-0 select-none list"
    >
       
      <item
        class="flex flex-shrink-0 flex-grow-0 min-h-8 items-center cursor-pointer w-full gap-2 select-none item"
      >
         
         
        <p
          class="flex flex-grow"
        >
          1
        </p>
         
      </item>
      <item
        class="flex flex-shrink-0 flex-grow-0 min-h-8 items-center cursor-pointer w-full gap-2 select-none item"
      >
         
         
        <p
          class="flex flex-grow"
        >
          2
        </p>
         
      </item>
      <item
        class="flex flex-shrink-0 flex-grow-0 min-h-8 items-center cursor-pointer w-full gap-2 select-none item"
      >
         
         
        <p
          class="flex flex-grow"
        >
          3
        </p>
         
      </item>
    </list>
  </div>
</body>
`;

exports[`List.svelte > Should render items using field mappings 1`] = `
<body>
  <div>
    <list
      class="flex flex-col w-full flex-shrink-0 select-none list"
    >
       
      <item
        class="flex flex-shrink-0 flex-grow-0 min-h-8 items-center cursor-pointer w-full gap-2 select-none item"
      >
         
         
        <p
          class="flex flex-grow"
        >
          1
        </p>
         
      </item>
      <item
        class="flex flex-shrink-0 flex-grow-0 min-h-8 items-center cursor-pointer w-full gap-2 select-none item"
      >
         
         
        <p
          class="flex flex-grow"
        >
          2
        </p>
         
      </item>
      <item
        class="flex flex-shrink-0 flex-grow-0 min-h-8 items-center cursor-pointer w-full gap-2 select-none item"
      >
         
         
        <p
          class="flex flex-grow"
        >
          3
        </p>
         
      </item>
    </list>
  </div>
</body>
`;
